[package]
name = "n0-tracing-test"
version = "0.3.0"
authors = ["n0 team <hello@n0.computer>", "Danilo Bargen <mail@dbrgn.ch>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/n0-computer/n0-tracing-test"
description = """
Helper functions and macros that allow for easier testing of crates that use `tracing`.
"""
readme = "../README.md"
categories = ["development-tools::testing"]

[dependencies]
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
n0-tracing-test-macro = { path = "../tracing-test-macro", version = "0.3" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] } # Used for doctests
tracing = { version = "0.1", default-features = false, features = ["std"] }

[badges]
maintenance = { status = "experimental" }

[features]
default = ["pretty-log-printing"]
# Disable hardcoded env filter
no-env-filter = ["n0-tracing-test-macro/no-env-filter"]
# Enables pretty log printing with support for RUST_LOG filtering and ansi colors
pretty-log-printing = []
